--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
                     <p>Изображение 2</p>
                 </div>
             </section>
-            <section>
+            <section class="container">
                 <a name = "third_section"></a>
                 <h2>Дополнительные источники</h2>
-                <div>
+                <div class="card">
                     <img src="img/icon.svg" alt="иконка"></img>
                     <h3>Полезная статья</h3>
                     <a href="https://hoster.ru/articles/chto-takoe-dns-server-prostymi-slovami-i-dlya-chego-on-nuzhen">Перейти</a>
                 </div>
-                <div>
+                <div class="card">
                     <img src="img/icon.svg" alt="иконка"></img>
                     <h3>Полезная статья</h3>
                     <a href="https://selectel.ru/blog/dns-server/">Перейти</a>
                 </div>
-                <div>
+                <div class="card">
                     <img src="img/icon.svg" alt="иконка"></img>
                     <h3>Полезная статья</h3>
                     <a href="https://eternalhost.net/base/domeny/chto-takoe-dns-server">Перейти</a>
