--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <title>DNS</title>
     </head>
     <body>
         <header>
@@ -23,7 +24,7 @@
         <main>
             <h1>DNS</h1>
             <section>
-                <a name = "first_section"></a>
+                <a id = "first_section"></a>
                 <h2>Что такое DNS</h2>
                 <p>Прежде чем начать говорить о DNS-серверах, расскажем о самой технологии DNS (Domain Name System). DNS — это технология, которая позволяет браузеру вроде Firefox, Chrome или Edge найти запрошенный пользователем сайт по его имени.</p>
                 <div>
@@ -32,30 +33,30 @@
                 </div>
             </section>
             <section>
-                <a name = "second_section"></a>
+                <a id = "second_section"></a>
                 <h2>Как работает DNS</h2>
                 <p>Принцип работы DNS похож на поиск и вызов контактов из телефонной книги смартфона. Ищем имя, нажимаем «позвонить», и телефон соединяет нас с нужным абонентом. Понятно, что смартфон в ходе звонка не использует само имя человека, вызов возможен только по номеру телефона. Если вы внесете имя без номера телефона, позвонить человеку не сможете.</p>
                 <p>Так и с сайтом. Каждому имени сайта соответствует набор цифр формата 000.000.000.000. Этот набор называется IP-адресом, примером реального IP-адреса является 192.168.0.154 или 203.113.89.134. Когда пользователь вводит в адресной строке браузера имя сайта, например google.com, компьютер запрашивает IP-адрес этого сайта на специальном DNS-сервере и после получения корректного ответа открывает сам сайт.</p>
                 <div>
-                    <img src="img/section 2.png" alt="">
+                    <img src="img/section2.png" alt="">
                     <p>Изображение 2</p>
                 </div>
             </section>
             <section class="container">
-                <a name = "third_section"></a>
+                <a id = "third_section"></a>
                 <h2>Дополнительные источники</h2>
                 <div class="card">
-                    <img src="img/icon.svg" alt="иконка"></img>
+                    <img src="img/icon.svg" alt="иконка">
                     <h3>Полезная статья</h3>
                     <a href="https://hoster.ru/articles/chto-takoe-dns-server-prostymi-slovami-i-dlya-chego-on-nuzhen">Перейти</a>
                 </div>
                 <div class="card">
-                    <img src="img/icon.svg" alt="иконка"></img>
+                    <img src="img/icon.svg" alt="иконка">
                     <h3>Полезная статья</h3>
                     <a href="https://selectel.ru/blog/dns-server/">Перейти</a>
                 </div>
                 <div class="card">
-                    <img src="img/icon.svg" alt="иконка"></img>
+                    <img src="img/icon.svg" alt="иконка">
                     <h3>Полезная статья</h3>
                     <a href="https://eternalhost.net/base/domeny/chto-takoe-dns-server">Перейти</a>
                 </div>
